# h4ptix

./: .gitignore  Pipfile  README.md
.github/: dependabot.yml
.github/workflows/: firmware.yml  software.yml
.west/: config
firmware/: .gitignore  CMakeLists.txt  west.yml
firmware/app/: CMakeLists.txt  Kconfig  Kconfig.hid  Kconfig.trigger  Kconfig.ui  debug.conf  prj.conf
firmware/app/boards/: h4ptix_basic.overlay  h4ptix_display.conf  h4ptix_display.overlay  h4ptix_lonely.overlay  h4ptix_matrix.conf
firmware/app/src/: hid.cxx  hid.h  main.cxx  messages.h  rpc.cxx  rpc.h  trigger.cxx  trigger.h  ui.cxx  ui.h
firmware/app/src/ui/: display.cxx  display.h  led.cxx  led.h
firmware/boards/h4ptix/: Kconfig  Kconfig.defconfig  Kconfig.h4ptix  board.yml  h4ptix-pinctrl.dtsi  h4ptix.dts  h4ptix.yaml  h4ptix_basic.dts  h4ptix_basic.yaml  h4ptix_common.dtsi  h4ptix_display.dts  h4ptix_display.yaml  h4ptix_display_defconfig  h4ptix_lonely.dts  h4ptix_lonely.yaml  h4ptix_matrix.dts  h4ptix_matrix.yaml
firmware/drivers/: CMakeLists.txt  Kconfig
firmware/drivers/gpio_trigger/: CMakeLists.txt  Kconfig  gpio_trigger.c
firmware/lib/: CMakeLists.txt  Kconfig
firmware/lib/uarti/: CMakeLists.txt  Kconfig  uarti.c
hardware/: H4ptiX.epro
proto/: rpc.proto
software/h4ptix/: device.go  error.go  go.mod  go.sum  h4ptix.go  h4ptix_example_test.go  hw.go  nop.go  opts.go  proto.go  serial_device.go  trigger.go
software/h4ptix/example/: go.mod  go.sum  main.go  party.go  trigger.go
software/haptix/: error.go  go.mod  proto.go
software/udev/: 70-h4ptix.rules
(+6 files in other folders)
